# Maskcnn_masking_library_project

./: README.md  downloadModel.py
Cpp/: CMakeLists.txt
Cpp/include/: readme.txt
Cpp/src/: main.cpp
Cpp/src/class_sources/: ImageOperations.cpp  Masking.cpp  OrtOperations.cpp
Python/: maskCNNuse.ipynb  trying_Segmantation_3_ball.ipynb  trying_Segmentation_0_cat.ipynb  trying_Segmentation_1_cat.ipynb  trying_Segmentation_2_car.ipynb  trying_Segmentation_4_car.ipynb  trying_Segmentation_6_onnx_ball.ipynb  trying_Segmentation_7_onnx_cat.ipynb
finished_lib/include_headers/: ImageOperations.hpp  Masking.hpp  OrtOperations.hpp
